test/cfg/resolution_error.yl
// RUN: compiler %s -cfg-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:4: error: 'main' function is expected to return 'unit'
fn main(): number {}

// CHECK-NOT: {{.*error.*}}
